--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@ body, html {
     background-color: white;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 body {
     font-family: "Source Sans 3", sans-serif;
 }
